# cynoup-server

./: .gitignore  .gitmodules  Makefile  README.md  cynoup-router.cabal  stack.yaml
app/: Convert.hs  MapService.hs  RoutingService.hs  RunServer.hs
docker/map-server/: Dockerfile
docker/routing-server/: Dockerfile
gen-hs/: NewEdenMap.hs  NewEdenMapService_Consts.hs  NewEdenMapService_Types.hs  NewEdenMap_Client.hs  NewEdenMap_Iface.hs  NewEdenRouting.hs  NewEdenRoutingService_Consts.hs  NewEdenRoutingService_Types.hs  NewEdenRouting_Client.hs  NewEdenRouting_Iface.hs  NewEden_Consts.hs  NewEden_Types.hs
gen-php/cynoup/map/: NewEdenMap.php  Types.php
gen-php/cynoup/neweden/: Types.php
gen-php/cynoup/routing/: NewEdenRouting.php  Types.php
gen-py/NewEden/: ttypes.py
gen-py/NewEdenMapService/: NewEdenMap-remote  NewEdenMap.py  __init__.py  constants.py  ttypes.py
gen-py/NewEdenRoutingService/: NewEdenRouting-remote  NewEdenRouting.py  __init__.py  constants.py  ttypes.py
if/: NewEden.thrift  NewEdenMapService.thrift  NewEdenRoutingService.thrift
src/: NewEden.hs
src/NewEden/: Closest.hs  Database.hs  Functions.hs  Routing.hs  Types.hs
src/NewEden/Routing/: Preferences.hs
test/: .TestQuickCheck.hs.swp  Spec.hs  TestHUnit.hs  TestLib.hs  TestQuickCheck.hs
