name:                cynoup-router
version:             0.1.1.0
synopsis:            A routing system for Eve Onlines database
description:         A routing server for New Eden, the galaxy in which
                     the MMO Eve Online takes place.

                     The module implements a simple dijkstra algorithm and
                     supports generating and combining multiple graphs.

homepage:            http://bitbucket.org/tiransol/cynoup-server
license:             AllRightsReserved
license-file:        LICENSE
author:              Danilaw
maintainer:          danilaw@
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NewEden
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-sqlite3
                     , QuickCheck
                     , bytestring
                     , containers
                     , hashable
                     , heap
                     , heredoc
                     , mtl
                     , text
                     , text-format
                     , unordered-containers
                     , vector
  other-modules:       NewEden.Types
                     , NewEden.Functions
                     , NewEden.Database
                     , NewEden.Routing
                     , NewEden.Routing.Preferences
                     , NewEden.Closest
  default-language:    Haskell2010

executable cynoup-map-server
  hs-source-dirs:      app, gen-hs
  main-is:             MapService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , bytestring
                     , containers
                     , cynoup-router
                     , directory
                     , hashable
                     , network
                     , text
                     , text-format
                     , thrift
                     , unordered-containers
                     , vector
  other-modules:       Convert
                     , NewEdenMap
                     , NewEdenMap_Iface
                     , NewEdenMapService_Types
                     , NewEdenRouting
                     , NewEdenRouting_Iface
                     , NewEdenRoutingService_Types
                     , NewEden_Types
                     , RunServer
  default-language:    Haskell2010

executable cynoup-router-server
  hs-source-dirs:      app, gen-hs
  main-is:             RoutingService.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , bytestring
                     , containers
                     , cynoup-router
                     , directory
                     , hashable
                     , network
                     , text
                     , text-format
                     , thrift
                     , unordered-containers
                     , vector
  other-modules:       NewEdenRouting
                     , NewEdenRoutingService_Types
                     , NewEdenRouting_Iface
                     , NewEden_Types
                     , RunServer
  default-language:    Haskell2010

test-suite cynoup-quickcheck
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             TestQuickCheck.hs
  build-depends:       base
                     , containers
                     , hashable
                     , HDBC
                     , HDBC-sqlite3
                     , heap
                     , heredoc
                     , mtl
                     , unordered-containers
                     , QuickCheck
  other-modules:       NewEden.Functions
                     , NewEden.Routing
                     , NewEden.Routing.Preferences
                     , NewEden.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite cynoup-hunit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             TestHUnit.hs
  build-depends:       base
                     , containers
                     , directory
                     , hashable
                     , HDBC
                     , HDBC-sqlite3
                     , heap
                     , heredoc
                     , mtl
                     , unordered-containers
                     , HUnit
  other-modules:       NewEden.Database
                     , NewEden.Functions
                     , NewEden.Routing
                     , NewEden.Routing.Preferences
                     , NewEden.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
